-Changed resolution to 1200-600, idk if it the ideal one or not -M

### 08/12/2023
-Added some stuff and fixed the none working (I hate it) scroll stuff in amphi, we now support all resolutions! -M

### 20/12/2023:
-Created the backbone and the structure for the basic APP main and header.py -M
-Fixed the class and made the methods to be added to the main -M
-Added data.txt where we'll store the data so that it doesn't get thrown once we close the app -M

### 28/12/2023:
-Forgot to add stuff, my bad but I added all the buttons for Amphi and Salle sections, they return a value to the final interface where the user
will have the timetable and stuff

### 29/12/2023
-Changed the background color and images
-Added workings beautiful buttons for the classroom numbers
-Made or attempted to make at least, the timetable

### 31/12/2023:
-Added the room class and appropriate instances into the kivy app header

### 01/01/2024:
-Added time tables to all the stuff, now we only have left the reservation stuff

### 03/01/2024:
-Added calendar, added reservation, modification and annulation buttons (Still not working) 

### 06/01/2024:
-Major update:
    .Changed backgrounds for the main window, the timetable the buttons.
    .Made the input
    .Removed Calendar and labels for now
    .Added the buttons and made the buttons and the label disappear on_leave
    .Added images to the repo, they're necessary.
I'm guessing this will be it on the front end, now we'll focus on making all of this work.

### 14/01/2024:
-DONE!
-Version Alpha.1.1 Done

### 27/01/2024:
-Added conference room, added new salle sections
-Fixed modify and made it only change the non empty input boxes
-Added ConfiScreen class for the new screen of salle de conférence
-Removed settings

### 28/01/2024:
-Version Alpha 1.2 DONE DONE DONE!!!
-Added the saving, loading algorythmes! It'll automatically save now, then it'll load it anytime you start the app!!!